Sat Dec 29 18:36:13 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/OS.i (putenv): Fixed a typo.  Thanks to Venkita for
 	  reporting this.
	
	* ace/OS.i (getenv): Return ACE_NOTSUP_RETURN(0) if we're
	  compiling on a platform that lacks getenv(), e.g., WinCE.
  	  Thanks to Venkita for reporting this.

Sat Dec 29 16:14:41 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/OS.h: 
	* ace/Default_Constants.h: Moved some constants from this file to
	  OS.h as it needed includes in OS.h. Need to take a better look
	  before any other dissection can be performed.
	  
Sat Dec 29 12:08:40 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/ace_dll.dsp:
	* ace/ace_lib.dsp: Added new header files into the project.

Sat Dec 29 11:57:40 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Default_Constants.h: A new header file that houses some of
	  the constants that are used widely by ACE and applications based
	  on ACE. The motivation for this one is the same as that of
	  creating Global_Macros.h. 
	
	* ace/Global_Macros.h: Moved some constant definitions from this
	  file to Default_Constants.h.

	* ace/OS.h: Moved some constant definitions out of this
	  file. There are some more that needs moving and will be done
	  over a period of time hopefully. 

Sat Dec 29 06:31:50 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/MEM_Stream_Test.cpp (test_concurrent): Added an
	  ACE_UNUSED_ARG(connect_client) to silence complaints on certain
 	  compilers about unused arguments.

Sat Dec 29 12:54:45 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SOCK_SAP/C-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/C-inserver.cpp:
        * examples/Mem_Map/file-reverse/file-reverse.cpp:
        * examples/Reactor/Multicast/Log_Wrapper.cpp:
        * examples/Reactor/Multicast/server.cpp:
          Made these files compiling when ACE_USES_WCHAR is set

        * examples/Map_Manager/test_hash_map_manager.cpp: